Fixed overflow of container
I used flex basis to set the width instead of setting the width of a flex box

--- a/css/style.css
+++ b/css/style.css
@@ -155,13 +155,10 @@ img {
 
 #Projects{
   display: flex;
-  justify-content: center;
   padding: 20px;
-  display: block;
-
+  flex-direction: column;
 
 }
-
 
 
 .project-container{
@@ -175,37 +172,42 @@ img {
   border: 4px solid indigo;
 
   
+
+  
 }
 .project-container div {
-  max-width: 100%; 
-  max-height: 100%;
-  height: 250px;
-  width: 500px;
+
+  max-height: auto;
+  height: 220px;
+  flex-basis: 500px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-
   border: 4px solid darkslategray;
   background: skyblue;
-  text-align: center;
   padding: 10px; 
   
   
 }
 .rotate-img{
   transform: rotate(90deg);
-  height: auto;
   max-width: 100%;
   max-height: 100%;
-  margin: 10px 0;
+  
+
+  
 }
 
 .project-container div img {
   width: 100px;
   height: auto;
-  display: block;
+  padding:0px;
+ 
+}
+
+.project-heading {
+  display: flex;
   
+
 }
 
 
